WIP: kalman quasinote

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(CIMU
   file_writer.c
   angles.c
   filters/iir.c
+  filters/kalman.c
 )
 
 target_link_libraries(CIMU PRIVATE CMSISDSP)
